--- a/src/index.css
+++ b/src/index.css
@@ -15,8 +15,8 @@ code {
 
 .bg >img {
   position: absolute; 
-  width: 100%;
-  height: 50%;
+  width: 400px;
+  height: 50px;
   display: block;
   margin-left: auto;
   margin-right: auto;
@@ -24,10 +24,17 @@ code {
 
 .center {
   margin: 0;
-  gap:5px;
   position: absolute;
   top: 50%;
   left: 50%;
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
+}
+
+.form{
+  width: 500px;
+}
+
+.container{
+  padding:20px
 }
